fix skills view on mobile view

--- a/src/styles/skill.scss
+++ b/src/styles/skill.scss
@@ -34,7 +34,7 @@
     padding-left: 0px;
     justify-content: center;
     grid-template-columns: repeat(2,30vmin);
-    grid-template-rows: repeat(9, 10vmin);
+    grid-template-rows: repeat(13, 10vmin);
   }
 }
 
@@ -43,7 +43,7 @@
     text-align: left;
     justify-content: center;
     grid-template-columns: repeat(1, 30vmin);
-    grid-template-rows:repeat(19, 12vmin) ;
+    grid-template-rows:repeat(20, 12vmin) ;
   }
 
 }
